# PolkadotGame

./: README.md
polkadot-sdk-polkadot-game/: Cargo.toml
polkadot-sdk-polkadot-game/node/: Cargo.toml
polkadot-sdk-polkadot-game/pallets/game/: Cargo.toml
polkadot-sdk-polkadot-game/pallets/game/src/: game.rs
polkadot-sdk-polkadot-game/pallets/template/: Cargo.toml
polkadot-sdk-polkadot-game/patches/bandersnatch_vrfs/: Cargo.toml
polkadot-sdk-polkadot-game/runtime/: Cargo.toml
polkadot-sdk-polkadot-game/runtime/src/: lib.rs
polkadot-sdk-solochain-template/: Cargo.toml  README.md
polkadot-sdk-solochain-template/node/: Cargo.toml
polkadot-sdk-solochain-template/pallets/game/: Cargo.toml
polkadot-sdk-solochain-template/pallets/game/src/: game.rs
polkadot-sdk-solochain-template/patches/bandersnatch_vrfs/: Cargo.toml
polkadot-sdk-solochain-template/patches/bandersnatch_vrfs/src/: lib.rs
polkadot-sdk-solochain-template/runtime/: Cargo.toml
