[package]
name = "bandersnatch_vrfs"
version = "0.0.4"
edition = "2021"

[lib]
name = "bandersnatch_vrfs"
path = "src/lib.rs"

[dependencies]
sp-std = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.14.0", default-features = false }

[features]
default = ["std"]
std = ["sp-std/std"]
substrate-curves = []
