[package]
name = "bandersnatch_vrfs"
version = "0.0.4"
edition = "2021"

[lib]
name = "bandersnatch_vrfs"
path = "src/lib.rs"

[dependencies]
pflonk = { git = "https://github.com/w3f/fflonk", rev = "3c4a87b" }
ark-bls12-381 = "0.4"
ark-ec = "0.4"
ark-ff = "0.4"
ark-serialize = "0.4"
ark-std = "0.4"
getrandom = { version = "0.2", features = ["js"] }
merlin = "3.0"
rand = "0.8"
rand_chacha = "0.3"
sha2 = "0.10"

[dev-dependencies]
criterion = "0.5"
hex = "0.4"
serde = "1.0"
serde_json = "1.0"

[features]
default = ["std"]
std = [
    "ark-bls12-381/std",
    "ark-ec/std",
    "ark-ff/std",
    "ark-serialize/std",
    "ark-std/std",
    "pflonk/std",
]
